# welldonelasagna

./: .gitignore  Cargo.toml  build.rs  discord_messages_table.sql  welldonelasagna_dump_001.sql  welldonelasagna_dump_002.sql  welldonelasagna_dump_003.sql  welldonelasagna_dump_004.sql
config/: quote_settings.toml
migrations/: 20240110173402_change_utf_format.sql  20250108200737_add_quote_scores.sql  20250108200738_add_quote_points.sql  20250108200739_add_quote_streaks.sql
r_code/: .RData  .Rhistory  data_representation.Rmd  data_tests.Rmd  data_tests.nb.html
sql_backups/: welldonelasagna_dump_001.sql  welldonelasagna_dump_004.sql
src/: cli.rs  logging_settings.rs  main.rs  setup.rs
src/commands/: f1_race.rs  mod.rs  quote.rs  scraper.rs  version.rs
src/commands/f1/: api.rs  commands.rs  embed.rs  mod.rs  models.rs  registry.rs
wdl_discord_bot/: Cargo.toml  build-linux.bat  build.rs  readme.md
wdl_discord_bot/config/: quote_settings.toml
wdl_discord_bot/migrations/: 20240107181232_add_name_column.sql  20240110173402_change_utf_format.sql  20250108200738_add_quote_points.sql  20250108200739_add_quote_streaks.sql
wdl_discord_bot/src/: cli.rs  logging_settings.rs  main.rs  quote.rs  setup.rs
wdl_discord_bot/src/commands/: mod.rs  quote.rs  scraper.rs  version.rs
wdl_discord_scraper/: Cargo.toml
wdl_discord_scraper/src/: logging_settings.rs  main.rs
wdl_web/: package-lock.json  package.json
wdl_web/app/: layout.tsx  page.tsx
wdl_web/app/components/: Barchart.tsx  CountMessageByUser.tsx  MessagesComponent.tsx  MessagesPerMonth.tsx  Navbar.tsx
wdl_web/pages/api/: connection.ts  countmessagesbyuser.ts  messages.ts  messagespermonth.ts
wdl_web/src/app/: page.tsx
wdl_web/src/components/: Homepage.tsx  Linechart.tsx  Navbar.tsx
welldonelasagna_web/.next/server/: server-reference-manifest.js  server-reference-manifest.json
