[package]
name = "wdl_discord_bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
dotenv = "0.15.0"
rand = "0.8.5"
serenity = { version = "0.12.0", features = ["collector", "model", "chrono"] }
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.3"
whoami = "1.4.1"
